@@ -1,0 +1,3 @@
+MD5 9e451f1084461795a96170adb6c4376b ntfs-3g-1.417.tgz 562094
+RMD160 aef2a087a7b523fa249216137613dc764d08eefe ntfs-3g-1.417.tgz 562094
+SHA256 6eff152c670cb9cab1c3d423aac1ce7825f3bc5f53be5ff1857c0079bd27ecc0 ntfs-3g-1.417.tgz 562094
